[project]
name = "reddit-cli"
version = "0.1.0"
description = "A Reddit CLI tool with AI-powered comment generation"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "requests",
    "rdt-cli",
]

[project.scripts]
reddit-cli = "reddit_cli.auto:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reddit_cli"]
